// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _accessKey="V" 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              V
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input accesskey="V" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _alert=true 1`] = `
<kol-input-date _alert="" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _disabled=true 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-form-field--disabled kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--disabled" disabled="" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _hideLabel=true 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-form-field--hide-label kol-input-date">
      <label class="kol-form-field__label" hidden="" htmlfor="input-date-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-label="Label" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
        </div>
        <div class="kol-form-field__tooltip">
          <div class="kol-tooltip__floating">
            <div class="kol-tooltip__arrow"></div>
            <span class="kol-span kol-tooltip__content" id="input-date-label-nonce">
              <span class="kol-span__container">
                <span class="kol-span__label">
                  Label
                </span>
                <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _hint="Hint" 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-describedby="input-date-hint-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="input-date-hint-nonce">
        Hint
      </span>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _infoPopover={"_label":"Info","_content":"Ich bin ein Hinweis.","_icons":"kolicon-alert-info"} 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <kol-popover-button-wc _content="Ich bin ein Hinweis." _hidelabel="" _icons="kolicon-alert-info" _inline="" _label="Info" _variant="ghost">
          <div class="kol-popover-button__popover--styled">
            Ich bin ein Hinweis.
          </div>
        </kol-popover-button-wc>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _touched="" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-form-field--error kol-form-field--hidden-msg kol-form-field--msg-type-error kol-form-field--touched kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-invalid="true" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _touched=true 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _touched="" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-form-field--error kol-form-field--msg-type-error kol-form-field--touched kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <input aria-describedby="input-date-msg-nonce" aria-invalid="true" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
        </div>
      </div>
      <div class="kol-alert kol-alert--type-error kol-alert--variant-msg kol-form-field__msg" id="input-date-msg-nonce" role="alert">
        <span class="visually-hidden">
          kol-error
        </span>
        <i aria-hidden="true" class="kol-alert__icon kol-icon kol-icon__icon kolicon-alert-error" role="presentation"></i>
        <div class="kol-alert__content">
          Es ist ein Fehler aufgetreten
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-describedby="input-date-msg-nonce" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _readOnly=true 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-form-field--read-only kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
        <span aria-hidden="true" class="kol-form-field__label__read-only">
          (kol-readonly)
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--readonly" id="input-date-nonce" name="field" readonly="" type="date" value="2025-01-01">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _shortKey="S" 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              S
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input aria-keyshortcuts="S" autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _touched=true 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _touched="" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-form-field--touched kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input kol-input--touched" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" _variant="custom" 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-form-field--custom kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;

exports[`kol-input-date should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01" 1`] = `
<kol-input-date _placeholder="Hier steht ein Platzhaltertext" _value="2025-01-01">
  <template shadowrootmode="open">
    <div class="date has-value kol-form-field kol-input-date">
      <label class="kol-form-field__label" htmlfor="input-date-nonce" id="input-date-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <input autocapitalize="off" autocomplete="off" autocorrect="off" class="kol-input" id="input-date-nonce" name="field" type="date" value="2025-01-01">
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-date>
`;
